[package]
name = "first_rs_001"
version = "0.1.1"
edition = "2018"
author = "90design"
license = "MIT"
description = "这是一个新手项目"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
panic = 'abort'
opt-level = 3
